--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,13 @@
+.form-box {
+	border-style: solid;
+	border-width: 1px;
+}
 
+/*************************/
+/******** PHONE **********/ 
+@media (max-width: 480px) {
+
+	.html { 
+	overflow-x: hidden; /* hide horizontal scroll bar */
+}
+}
