--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,13 @@
 /*************************/
 /** Overwrite Bootstrap **/
 /*************************/
-.btn-success {
-	background-color: #628000;
-	border-color: #628000;
-}
-
-.form-control {
-	border-radius: 2px;
-}
 
 .header-button-toggle {
 	margin-top: 5px;
+}
+
+.navbar {
+	border: none;
 }
 
 .nav > li > a:hover, .nav > li > a:focus {
@@ -19,6 +15,22 @@
   text-decoration: none;
 	border-bottom: 1px solid #000000;
 }
+
+.navbar- > li > a:hover, .navbar-nav > li > a:focus {
+  background-color: #003E74;
+  text-decoration: none;
+	border-bottom: 1px solid #000000;
+}
+
+.form-control {
+	border-radius: 2px;
+}
+
+.btn-success {
+	background-color: #628000;
+	border-color: #628000;
+}
+
 
 @media (min-width: 768px) {
 
@@ -28,6 +40,17 @@
 	}
 
 }
+
+/*@media (min-width: 1200px) {
+
+	.container {
+		width: auto;
+		padding-left: 0px;
+		padding-right: 0px;
+		overflow: hidden;
+	}
+
+}*/
 
 /*************************/
 
@@ -39,9 +62,15 @@
 	color: #ffffff;
 }
 
+.nav-row {
+	margin-left: 0px;
+	margin-right: 0px;
+}
+
 .header-right-text {
 	color: #ffffff;
 }
+
 
 .main-image {
 	padding-bottom: 15px;
@@ -65,6 +94,7 @@
 	margin-bottom: 50px;
 }
 
+/* should go in the overwrite sections */
 .form-group {
 	padding-bottom: 10px;
 }
@@ -91,11 +121,6 @@
 	font-size: large;
 }
 
-.container-full {
-  margin: 0 auto;
-  width: 100%;
-}
-
 /*************************/
 /******** PHONE **********/
 /*************************/
@@ -106,6 +131,11 @@
 		padding-right: 0px;
 		overflow: hidden; /* makes the horizontal scroll bar disappear */
 	}
+
+	.container-fluid {
+		overflow: hidden;
+	}
+
 	.nav-logo {
 		width: 130%;
 		padding-left: 5px;
@@ -162,3 +192,8 @@
 /*************************/
 /******** TABLET **********/
 /*************************/
+
+/*.col-md-6 {
+	padding-left: 55px;
+	padding-right: 55px;
+}*/
