--- a/css/styles.css
+++ b/css/styles.css
@@ -8,27 +8,39 @@
 
 .navbar {
 	border: none;
+	border-radius: 0px;
 }
 
-.nav > li > a:hover, .nav > li > a:focus {
+.nav > li > a:hover {
   background-color: #003E74;
   text-decoration: none;
 	border-bottom: 1px solid #000000;
+	height: 40px;
 }
 
-.navbar- > li > a:hover, .navbar-nav > li > a:focus {
-  background-color: #003E74;
-  text-decoration: none;
+.nav > li > a:focus {
+	background-color: #003E74;
+	text-decoration: none;
 	border-bottom: 1px solid #000000;
+	color: white;
+	height: 40px;
 }
 
 .form-control {
-	border-radius: 2px;
+	border-radius: 1px;
+}
+
+.form-group {
+	padding-bottom: 10px;
 }
 
 .btn-success {
 	background-color: #628000;
 	border-color: #628000;
+}
+
+label {
+	color: #745555;
 }
 
 
@@ -41,21 +53,17 @@
 
 }
 
-/*@media (min-width: 1200px) {
-
-	.container {
-		width: auto;
-		padding-left: 0px;
-		padding-right: 0px;
-		overflow: hidden;
-	}
-
-}*/
-
 /*************************/
+/********* CSS ***********/
+/*************************/
+
+.header-container {
+	border-bottom: solid #000000 1px;
+}
 
 .nav-links a {
 	color: #003E74;
+	font-size: 15px;
 }
 
 .nav-links a:hover {
@@ -69,8 +77,24 @@
 
 .header-right-text {
 	color: #ffffff;
+	font-size: 25px;
+	font-weight: 300;
+	letter-spacing: 1px;
 }
 
+.header-nav {
+	background-color: #003E74;
+	margin-bottom: 0px;
+}
+
+.header-nav-secondary {
+	background-color: #E9EAED;
+	min-height: 0px;
+}
+
+.header-navbar {
+	background-color:#E9EAED;
+}
 
 .main-image {
 	padding-bottom: 15px;
@@ -79,11 +103,22 @@
 .main-row {
 	margin-left: 0px;
 	margin-right: 0px;
+	margin-top: 15px;
 }
 
 .main-header-text {
 	margin-top: 0px;
 	margin-bottom: 15px;
+	font-weight: 400;
+	color: #745555
+}
+
+.main-paragraph {
+	font-size: 1.2em;
+}
+
+.main-paragraph > p {
+	width: 97%;
 }
 
 .form-box {
@@ -94,13 +129,16 @@
 	margin-bottom: 50px;
 }
 
-/* should go in the overwrite sections */
-.form-group {
-	padding-bottom: 10px;
-}
-
 .form-radio {
 	margin-left: 15px;
+}
+
+.form-btn-submit {
+	letter-spacing: 1px;
+}
+
+.footer {
+	background-color:#E9EAED;
 }
 
 .footer-links {
@@ -108,7 +146,8 @@
 }
 
 .footer-links a {
-	color: #696969;
+	color: #946666;
+	font-size: 16px;
 }
 
 .footer-copyright p {
@@ -119,11 +158,18 @@
 	padding-top: 30px;
 	padding-bottom: 30px;
 	font-size: large;
+	margin-left: 0px;
+	margin-right: 0px;
+}
+
+.footer-col {
+	text-align: center;
 }
 
 /*************************/
 /******** PHONE **********/
 /*************************/
+
 @media (max-width: 480px) {
 
 	.container {
@@ -146,9 +192,18 @@
 		margin-bottom: 0px;
 	}
 
+	.navbar-collapse {
+		border-top: none;
+	}
+
 	.main-header-text-container {
 		padding-left: 5px;
 		padding-right: 5px;
+		padding-top: 25px;
+	}
+
+	.main-row {
+		margin-top: 0px;
 	}
 
 	.form-container {
@@ -165,8 +220,17 @@
 		margin-left: 20px;
 	}
 
+	.form-btn-submit {
+		font-size: 16px;
+		line-height: 1.32857143;
+	}
+
 	.footer-links {
 			text-align: center;
+	}
+
+	.footer-links a {
+		font-size: 15px;
 	}
 
 	.footer-copyright {
@@ -192,8 +256,3 @@
 /*************************/
 /******** TABLET **********/
 /*************************/
-
-/*.col-md-6 {
-	padding-left: 55px;
-	padding-right: 55px;
-}*/
